--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="タイトル、#タグを付与できる多機能ブックマークサービス"
     />
     <meta property="og:image" content="%PUBLIC_URL%/yakusugi_logo256.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/yakusugi_logo256.png" />
